Apply second round of review follow-ups
Co-authored-by: AntonLem <2189039+AntonLem@users.noreply.github.com>